<resources>
    <string name="app_name">Cyril Tools</string>
    <string name="label_app_list">APK Extractor</string>
    <string name="label_convert">Text converter</string>
    <string name="label_level">Level</string>
    <string name="label_misc">Miscellaneous</string>
    <string name="label_qrcode">QR Code</string>
    <string name="label_ruler">Ruler</string>
    <string name="active_display">Active Display</string>
    <string name="notification_listener_switch_title">Enable active display</string>
    <string name="notification_manager">Notification</string>
    <string name="notification_switch_title">Enable notification</string>
    <string name="network_indicator_switch_summary">Show network speed in status bar</string>
    <string name="network_indicator_switch_title">Enable network indicator</string>
    <string name="network_indicator_update_interval_title">Network indicator update interval</string>
    <string name="list_system_apps">System apps</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_commit">Commit</string>
    <string name="menu_save_image">save</string>
    <string name="menu_reset">reset</string>
    <string name="button_encode">encode</string>
    <string name="button_convert">convert</string>
    <string name="button_clear">clear</string>
    <string name="hint_content">Enter</string>
    <string name="hint_normal">Enter normal text</string>
    <string name="hint_special">Enter complex text</string>

    <string name="notification_listener_key" translatable="false">enableNotificationListener</string>
    <string name="notification_key" translatable="false">enableNotification</string>
    <string name="network_indicator_key" translatable="false">enableNetworkIndicator</string>
    <string name="network_indicator_update_interval_key" translatable="false">networkIndicatorUpdateInterval</string>

    <string-array name="convert_options">
        <item>UTF-16</item>
        <item>UTF-8</item>
        <item>Unicode</item>
        <item>Base64</item>
        <item>Morse</item>
        <item>Url</item>
    </string-array>
</resources>
